1.6.5
-----
(RB=109987)
Rename startServer task in restli-example-server to startExampleServer.
Rename RestLiExamplesServer in restli-int-test-server to RestLiIntTestServer.
The old startServer task is still used to start the current restli-int-test-server.

1.6.4
-----
(RB=103770)
Allow custom annotations in resource classes to be passed to generated .restspec.json files.

(RB=99932)
Add D2ClientBuilder class, which conveniently generates D2Client with basic ZooKeeper setup.

1.6.3
-----
(RB=107630)
pass requestContext up to restli layer.

1.6.2
-----
(RB=103500)
Move non-LI-specific part of photo server example into pegasus.

1.6.1
-----
(RB=105748)
Integrate compatibility level into idl checker. The exit code of the main function now depends on both
the check result and the level.

(RB=106155)
Fix incorrect handling of absent optional complex query parameters.

1.6.0
-----
(RB=101499)
Add "validatorPriority" to enable validator execution order to be specified.
See details in DataSchemaAnnotationValidator class.

 * <b>Validator Execution Order</b>
 * <p>
 *
 * Execution ordering of multiple validators specified within the same "validate"
 * property is determined by the "validatorPriority" property of each validator.
 *
 * <code>
 *   "validate" : {
 *     "higherPriorityValidator" : {
 *       "validatorPriority" : 1
 *     },
 *     "defaultPriorityValidator" : {
 *     },
 *     "lowerPriorityValidator" : {
 *       "validatorPriority" : -1
 *     }
 *   }
 * </code>
 * <p>
 *
 * The higher the priority value, the higher the priority of the validator, i.e.
 * a validator with higher prority value will be executed before the validators
 * with lower priority values. The default priority value for a validator that
 * does not specify a priority value is 0. Execution order of validators with
 * the same priority value is not defined or specified.
 * <p>
 *
 * Validators may be attached to a field as well as the type of the field.