@@ -1,0 +1,7 @@
+{
+  "type" : "record",
+  "name" : "CustomAnnotationContentSchema",
+  "namespace" : "com.linkedin.restli.restspec",
+  "doc" : "Unstructured record that represents arbitrary custom annotations for idl. Actual content is always a map with annotation's overridable member name as key and member value as value",
+  "fields" : []
+}
