@@ -2,6 +2,7 @@
   "type" : "record",
   "name" : "FinderSchema",
   "namespace" : "com.linkedin.restli.restspec",
+  "include" : [ "CustomAnnotationSchema" ],
   "fields" : [
     {
       "name" : "name",
@@ -37,12 +38,6 @@
       "name" : "assocKeys",
       "doc" : "list of association keys for this finder - only present if this finder takes multiple association keys",
       "type" : { "type" : "array", "items" : "string" },
-      "optional" : true
-    },
-    {
-      "name" : "annotations",
-      "doc" : "custom annotation data",
-      "type" : "CustomAnnotationSchema",
       "optional" : true
     }
   ]
